--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
     "main": "index.js",
     "scripts": {
         "start-dev": "nodemon server.js",
-        "start": "vercel dev",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "start": "node server.js",
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "build": "echo 'No build step required'"
     },
     "keywords": [],
     "author": "",
