--- a/vercel.json
+++ b/vercel.json
@@ -1,24 +1,15 @@
 {
-    "projects": "pickle-mate-server",
-    "rewrites": [
-      { "source": "/api/(.*)", "destination": "/api/$1" }
-    ],
-    "functions": {
-      "api/**/*.js": {
-        "runtime": "nodejs18.x"
-      }
-    },
+    "version": 2,
     "builds": [
-      {
-        "src": "server/api/index.js",
-        "use": "@vercel/node"
-      }
+        {
+            "src": "server.js",
+            "use": "@vercel/node"
+        }
     ],
-    "routes": [
-      {
-        "src": "/api/(.*)",
-        "dest": "server/api/index.js"
-      }
+    "rewrites": [
+        {
+            "source": "/(.*)",
+            "destination": "/server.js"
+        }
     ]
-  }
-  
+}
