--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 MONGO_URI=mongodb+srv://leanhtrung97:PY6arRW2A8gSoX46@cluster0.sfeavdl.mongodb.net/PickleMateDB?retryWrites=true&w=majority&appName=Cluster0
 PORT=8080
+DOMAIN=https://pickle-mate-server.vercel.app
